# craft

./: .gitignore  README.md
snapseek-main/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
snapseek-main/.github/: copilot-instructions.md
snapseek-main/agent/: function_app.py  local.settings.template.json  requirements.txt
snapseek-main/agent/shared/: __init__.py  config.py  tools.py
snapseek-main/backend/: .env.example  Dockerfile  requirements.txt
snapseek-main/backend/app/: __init__.py  config.py  main.py
snapseek-main/backend/app/models/: __init__.py
snapseek-main/backend/app/routers/: __init__.py  chat.py  images.py  persons.py  search.py
snapseek-main/backend/app/services/: __init__.py  blob_service.py  chat_service.py  person_service.py  search_service.py
snapseek-main/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
snapseek-main/frontend/src/: App.tsx  index.css
snapseek-main/frontend/src/components/: ChatInterface.tsx  ImageDetailPanel.tsx  ImageGrid.tsx  PeopleTab.tsx  SearchBar.tsx  index.ts
snapseek-main/frontend/src/hooks/: useApi.ts
snapseek-main/frontend/src/services/: api.ts
snapseek-main/frontend/src/types/: index.ts
snapseek-main/indexer/: Dockerfile  requirements.txt
snapseek-main/indexer/indexer/: __init__.py  config.py  main.py
snapseek-main/indexer/indexer/analyzers/: __init__.py  computer_vision.py  document_intelligence.py  face_api.py
snapseek-main/indexer/indexer/embeddings/: __init__.py  image_embedding.py  (+1 more)
(+106 files in other folders)
